feat: implement Phase 2 & 3 - AI Infrastructure, EDA, and Real-time Updates
- Phase 2: Integrated AI-assisted pricing via RAG and enhanced UX/Dashboard components.
- Phase 3 AI: Implemented GPT-4V Vision stubs and an in-memory RAG vector store with cosine similarity for historical pricing intelligence.
- Phase 3 Core: Established Event-Driven Architecture (EDA) using Domain Events and an in-memory event bus for service decoupling.
- Phase 3 Real-time: Integrated WebSockets (SockJS/STOMP) with polling fallback for live bid updates and auction status changes.
- Phase 3 Monitoring: Enabled Spring Boot Actuator with custom health indicators for AI and Event services.
- AI Interaction Flow: Overhauled 'Create Auction' with image upload, Vision analysis, RAG pricing, and detailed AI reasoning/explanations.
- UI/UX: Standardized iconography across all 8 frontend components using Lucide React for professional standards.
- Bug Fixes:
    - Resolved Vite/SockJS global is not defined error via polyfill.
    - Fixed Spring Security 403 Forbidden issues for Actuator and WebSocket handshake endpoints.