@@ -9,27 +9,42 @@ import org.springframework.stereotype.Service;
 
 import com.FishOnBid.FishOnBid_Backend.entity.Auction;
 import com.FishOnBid.FishOnBid_Backend.entity.Bid;
+import com.FishOnBid.FishOnBid_Backend.events.EventPublisher;
 import com.FishOnBid.FishOnBid_Backend.repository.AuctionRepository;
 import com.FishOnBid.FishOnBid_Backend.repository.BidRepository;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class AuctionService {
 
     private final AuctionRepository auctionRepo;
     private final BidRepository bidRepo;
+    private final EventPublisher eventPublisher;
 
     public Auction createAuction(Auction auction) {
         auction.setActive(true);
-        return auctionRepo.save(auction);
+        Auction saved = auctionRepo.save(auction);
+        
+        // Publish event
+        eventPublisher.publishAuctionCreated(
+                saved.getId(),
+                saved.getFishName(),
+                saved.getStartPrice(),
+                saved.getLocation(),
+                "system" // TODO: Get from security context
+        );
+        
+        log.info("Auction created: id={}, fish={}", saved.getId(), saved.getFishName());
+        return saved;
     }
 
     @Transactional
     public Bid closeAuctionAndSelectWinner(Long auctionId) {
-
         Auction auction = auctionRepo.findById(auctionId)
                 .orElseThrow(() -> new RuntimeException("Auction not found"));
 
@@ -37,26 +52,37 @@ public class AuctionService {
             throw new RuntimeException("Auction already closed");
         }
 
-        // Find highest bid
-        Bid winningBid = bidRepo
-                .findTopByAuctionIdOrderByAmountDesc(auctionId)
-                .orElseThrow(() -> new RuntimeException("No bids placed"));
+        List<Bid> bids = bidRepo.findByAuctionIdOrderByAmountDesc(auctionId);
+        Bid winningBid = bids.isEmpty() ? null : bids.get(0);
 
         // Close auction
         auction.setActive(false);
         auctionRepo.save(auction);
 
+        // Publish event
+        eventPublisher.publishAuctionClosed(
+                auction.getId(),
+                auction.getFishName(),
+                auction.getCurrentPrice(),
+                winningBid != null ? winningBid.getBidderEmail() : null,
+                bids.size()
+        );
+
+        log.info("Auction closed: id={}, winner={}", auctionId, 
+                winningBid != null ? winningBid.getBidderEmail() : "NONE");
+        
+        if (winningBid == null) {
+            throw new RuntimeException("No bids placed");
+        }
         return winningBid;
     }
 
-
     @Transactional
     public Bid placeBid(Long auctionId, double amount, String email) {
-
         Auction auction = auctionRepo.findByIdForUpdate(auctionId)
                 .orElseThrow(() -> new RuntimeException("Auction not found"));
 
-        // ⛔ Auto-close check
+        // Auto-close check
         if (LocalDateTime.now().isAfter(auction.getEndTime())) {
             auction.setActive(false);
             auctionRepo.save(auction);
@@ -71,6 +97,7 @@ public class AuctionService {
             throw new RuntimeException("Bid must be higher than current price");
         }
 
+        double previousPrice = auction.getCurrentPrice();
         auction.setCurrentPrice(amount);
 
         Bid bid = new Bid();
@@ -82,17 +109,26 @@ public class AuctionService {
         bidRepo.save(bid);
         auctionRepo.save(auction);
 
+        // Publish event - THIS IS THE KEY FOR REAL-TIME UPDATES
+        eventPublisher.publishBidPlaced(
+                auctionId,
+                bid.getId(),
+                amount,
+                previousPrice,
+                email,
+                auction.getFishName()
+        );
+
+        log.info("Bid placed: auctionId={}, amount={}, bidder={}", auctionId, amount, email);
         return bid;
     }
 
     public Map<String, Object> getAuctionSummary(Long auctionId) {
-
         Auction auction = auctionRepo.findById(auctionId)
                 .orElseThrow(() -> new RuntimeException("Auction not found"));
 
         List<Bid> bids = bidRepo.findByAuctionIdOrderByAmountDesc(auctionId);
-
-        Bid winningBid = bids.isEmpty() ? null : bids.getFirst();
+        Bid winningBid = bids.isEmpty() ? null : bids.get(0);
 
         Map<String, Object> summary = new HashMap<>();
         summary.put("auctionId", auction.getId());
@@ -120,4 +156,15 @@ public class AuctionService {
         return bidRepo.findByAuctionIdOrderByAmountDesc(auctionId);
     }
 
+    public List<Auction> getAllAuctions() {
+        return auctionRepo.findAll();
+    }
+
+    public List<Auction> getActiveAuctions() {
+        return auctionRepo.findByActiveTrue();
+    }
+
+    public void deleteAuction(Long id) {
+        auctionRepo.deleteById(id);
+    }
 }
